; ModuleID = '/home/carl/AnghaBench/redis/deps/hiredis/extr_sds.c_sdsAllocSize.c'
source_filename = "/home/carl/AnghaBench/redis/deps/hiredis/extr_sds.c_sdsAllocSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sdsAllocSize(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @sdsalloc(i32* %4)
  store i64 %5, i64* %3, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = getelementptr inbounds i32, i32* %6, i64 -1
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @sdsHdrSize(i32 %8)
  %10 = load i64, i64* %3, align 8
  %11 = add i64 %9, %10
  %12 = add i64 %11, 1
  ret i64 %12
}

declare dso_local i64 @sdsalloc(i32*) #1

declare dso_local i64 @sdsHdrSize(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
